--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ibim Jacks</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://github.com/ibimi/cv/commit/bb8e76364513548be10af78cbbae6400c60da915">
   <link rel="icon" href="abobi.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
