--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ibim Jacks</title>
-  <link rel="stylesheet" href="https://ibimi.github.io/style.css">
+  <link rel="stylesheet" href="https://ibimi.github.io/styles.css">
   <link rel="icon" href="abobi.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
